# DAW

./: .gitattributes  .gitignore  CMakeLists.txt
.github/: README.md
.github/workflows/: build.yml
App/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h  ProjectFile.cpp  ProjectFile.h
Audio_Engine/: CMakeLists.txt
Audio_Engine/Arrangement/: ArrangementState.cpp  ArrangementState.h
Audio_Engine/DSP/: DSPProcessor.h  GainProcessor.cpp  GainProcessor.h
Audio_Engine/Graph/: DSPChain.cpp  DSPChain.h
Audio_Engine/IO/: AudioInputHandler.cpp  AudioInputHandler.h  DeviceManager.cpp  DeviceManager.h  InputNode.cpp  InputNode.h  InputRingBuffer.cpp  InputRingBuffer.h  OutputNode.cpp  OutputNode.h
Audio_Engine/MIDI/: MidiInputNode.cpp  MidiInputNode.h  MidiSynth.cpp  MidiSynth.h
Audio_Engine/Recording/: PlaybackManager.h  RecordingManager.cpp  RecordingManager.h
Audio_Engine/Root/: AudioEngine.cpp  AudioEngine.h
Audio_Engine/Test/: CMakeLists.txt  Main.cpp  Test_Audio_Engine.cpp  Test_Audio_Engine.h
Audio_Engine/Tracks/: AudioTrack.cpp  AudioTrack.h  RecordedClip.h  TrackInputRouter.cpp  TrackInputRouter.h
ExternalPlugins/: ATONE.vst3
ExternalPlugins/InstPlugin/DSK_Dynamic_Guitars_64bits/DSK Dynamic Guitars (64bits)/DSK Dynamic Guitars.instruments/: Acoustic Guitar.mse  Nylon Guitar.mse  Steel Guitar.mse
ExternalPlugins/InstPlugin/DSK_Saxophones_-_win64/: Install and help.txt
ExternalPlugins/InstPlugin/DSK_Saxophones_-_win64/DSK Saxophones - win64/: DSK Music - Readme.txt
ExternalPlugins/InstPlugin/DSK_Saxophones_-_win64/DSK Saxophones - win64/DSK Saxophones.instruments/: Soprano Sax.mse  Tenor Sax.mse
ExternalPlugins/InstPlugin/drum-plugin/99Sounds Drumplayer v1.0 Windows 64-bit VST3/: INSTRUCTIONS.txt
ExternalPlugins/InstPlugin/drum-plugin/99Sounds Drumplayer v1.0 Windows 64-bit VST3/99Sounds Drumplayer v1.0 Windows 64-bit VST3/Drumplayer v1.instruments/: 01 Analog Kit.mse  02 C64 Kit.mse  03 Cassette 808.mse  04 Cassette 909.mse  05 Dubby Kit.mse  06 Dubstep Kit.mse  07 Eighties Kit.mse  08 Electro Kit.mse  09 Game Boy Kit.mse  10 Heat Kit.mse  11 Heavy Kit.mse  12 LoFi Kit.mse  13 Samplefino Kit.mse  14 Tech Kit.mse  15 Thrash Kit.mse  16 Toy Kit.mse  17 Trap Kit.mse  18 Vinyl Kit.mse  19 Synth Kicks Kit.mse  20 Bonus Kicks Kit.mse
ExternalPlugins/InstPlugin/piano-plugin/Upright Piano Windows VST3 64-bit/: Upright Piano.vst3
GUI/: CMakeLists.txt  arrangementcomponent.cpp  arrangementcomponent.h  dawstate.h  guicomponent.cpp  guicomponent.h  mixermastercomponent.cpp  mixermastercomponent.h  recentclipscomponent.cpp  recentclipscomponent.h  settingswindow.h  sharedpopupmenulookandfeel.h  tempocontrolcomponent.cpp  tempocontrolcomponent.h  test_dawstate.cpp  theme.cpp  theme.h  timelinecomponent.cpp  timelinecomponent.h  tracklistcomponent.cpp  tracklistcomponent.h
GUI/Test/: CMakeLists.txt  Main.cpp  Test_GUI.cpp
JIVE/jive_core/values/variant-converters/: jive_FlexVariantConverters.cpp
Piano_Roll/: CMakeLists.txt  pianoRoll.cpp  pianoRoll.h
Piano_Roll/Test/: CMakeLists.txt  Main.cpp  Test_Piano_Roll.cpp
Plugin/: BuiltInPluginTheme.h  CMakeLists.txt  LowpassHighpassFilter.cpp  LowpassHighpassFilter.h  PluginProcessor.cpp  PluginProcessor.h
Plugin/Compressor/: Compressor.cpp  Compressor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugin/GainPanFilter/: GainPanFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugin/LowHighFilter/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
Plugin/Plugins (External)/piano-plugin/Upright Piano Windows VST3 64-bit/Upright Piano.instruments/: Upright Piano.mse
Plugin/Plugins/GainPanFilter/: GainPanFilter.cpp  GanPanFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugin/Plugins/LowpassHighpassFilter/: LowpassHighpassFilter.cpp  LowpassHighpassFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugin/SevenBandEQ/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SevenBandEQ.cpp  SevenBandEQ.h
Plugin/Test/: CMakeLists.txt  Main.cpp  Test_Plugin.cpp  Test_Plugin.h
Plugin_Hosting/: CMakeLists.txt  pluginhostmanager.cpp  pluginhostmanager.h
Plugin_Hosting/Test/: CMakeLists.txt  Main.cpp  Test_Plugin_Hosting.cpp
Resources/: documentation.txt
Resources/ui/styles/: styles.json
Resources/ui/views/: main_view.xml
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  layout.xml  style.css
Utilities/: CMakeLists.txt  util.cpp
piano-plugin/Upright Piano Windows VST3 64-bit/: Upright Piano.vst3
